--- a/src/pages/productEdit/index.wxml
+++ b/src/pages/productEdit/index.wxml
@@ -131,7 +131,7 @@
 								<van-checkbox-group value="{{productInfo.paymentTypeIds}}" bind:change="onPayTypeChange">
 										<van-cell-group>
 												<van-cell wx:for="{{ paymentTypeList }}" wx:key="index" title=" {{ item.name }}" value-class="value-class" clickable data-index="{{ index }}" bind:click="PayTypeToggle">
-														<van-checkbox catch:tap="PayTypeNoop" class="checkboxes-{{ index }}" name="{{ item.id }}" />
+														<van-checkbox catch:tap="PayTypeNoop" checked-color="#f44" class="checkboxes-{{ index }}" name="{{ item.id }}" />
 												</van-cell>
 										</van-cell-group>
 								</van-checkbox-group>
