--- a/src/pages/applyMerchant/index.wxml
+++ b/src/pages/applyMerchant/index.wxml
@@ -5,7 +5,7 @@
                 <!-- 店铺图片 S -->
                 <view class="basic-info-images">
                     <i-grid i-class="basic-info-images-guid">
-                        <i-grid-item i-class="grid-item" wx:for="{{applyData.resources}}" wx:key="{{index}}">
+                        <i-grid-item i-class="grid-item" wx:for="{{applyData.resources}}" wx:key="index">
                             <image class="item-images" mode="aspectFill" src="{{item.url}}" />
                             <van-button size="mini" square type="danger" custom-class="close" data-id="{{item.id}}" bindtap="deleteImage">
                                 删除
@@ -18,7 +18,7 @@
                                 </view>
                             </view>
                         </i-grid-item>
-                        <i-grid-item i-class="grid-item" wx:for="{{2-applyData.resources.length}}" wx:key="{{index}}">
+                        <i-grid-item i-class="grid-item" wx:for="{{2-applyData.resources.length}}" wx:key="index">
                             <view class="grid-item-empty" />
                         </i-grid-item>
                     </i-grid>
